feat: add course details endpoint for QST-4
